--- a/src/index.scss
+++ b/src/index.scss
@@ -13,12 +13,131 @@ body {
 
 .wrapper {
 
+  position: relative;
   background-color: white;
   box-shadow: 0 10px 20px black;
   border-radius: 20px;
 
   max-width: 1080px;
   margin: 50px auto;
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(128, 128, 128, 0.299);
+    border-radius: 20px;
+  }
+  .cartModal {
+    position: absolute;
+    z-index: 1;
+    right: 0;
+    bottom: 0;
+    width: 350px;
+    height: 100%;
+    background-color: white;
+    border-radius: 0 20px 20px 0;
+    .cartModalContainer {
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      height: 95%;
+      .cartModalHeader {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+      }
+      .cartModalContent {
+        overflow: auto;
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        margin-bottom: 30px;
+        .cartModalCard {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          border: 1px solid rgba(128, 128, 128, 0.296);
+          border-radius: 20px;
+          padding: 10px;
+          .cartModalCardItems {
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+            .cartModalCardItemsTitle {
+              font-size: 14px;
+            }
+            .cartModalCardItemsPrice {
+              font-weight: bold;
+              font-size: 14px;
+            }
+          }
+        }
+      }
+      .cartModalFooter {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        .cartModalFooterTotal {
+          display: flex;
+          justify-content: space-between;
+          gap: 5px;
+          .cartModalFooterTotalMidle {
+            flex: 1;
+            border-bottom: 1px dashed rgba(128, 128, 128, 0.495);
+          }
+          .cartModalFooterTotalPrice {
+            font-weight: bold;
+          }
+        }
+        .cartModalFooterFare {
+          display: flex;
+          justify-content: space-between;
+          gap: 5px;
+          margin-bottom: 10px;
+          .cartModalFooterFareMidle {
+            flex: 1;
+            border-bottom: 1px dashed rgba(128, 128, 128, 0.495);
+          }
+          .cartModalFooterFarePrice {
+            font-weight: bold;
+          }
+        }
+        .cartModalBtn {
+          button {
+            width: 100%;
+            background-color: rgb(68, 208, 68);
+            display: flex;
+            justify-content: space-between;
+            padding: 15px;
+            border-radius: 20px;
+            border: 0;
+            color: white;
+            font-weight: bold;
+              &:hover {
+              background-color: lighten($color: rgb(68, 208, 68), $amount: 10);
+              transition: background-color 0.2s ease-in-out;
+              &:active {
+                background-color: darken($color: rgb(68, 208, 68), $amount: 10);
+                transition: background-color 0.2s ease-in-out;
+              }
+              img {
+                transform: translateX(-80px);
+                transition: transform 0.2s ease-in-out;
+              }
+              span {
+                transform: translateX(100px);
+                transition: transform 0.2s ease-in-out;
+              }  
+            }
+          }
+        }
+      }
+    }
+  }
 
   header {
     padding: 40px;
@@ -49,6 +168,23 @@ body {
 
   .content {
     padding: 40px;
+    .contentHeader {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 20px;
+      .contentHeaderInput {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        border: 1px solid rgba(128, 128, 128, 0.412);
+        border-radius: 20px;
+        padding: 10px;
+        input {
+          outline: none;
+          border: 0;
+        }
+      }
+    }
     .contentCards {
       display: flex;
       flex-wrap: wrap;
@@ -61,9 +197,15 @@ body {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      border: 1px solid black;
+      border: 1px solid rgba(128, 128, 128, 0.249);
       border-radius: 20px;
       padding: 20px;
+      &:hover {
+        transform: translateX(20px);
+        transform: translateY(-10px);
+        box-shadow: 5px 5px 10px black;
+        transition: box-shadow, transform 0.2s ease-in-out;
+      }
 
       .cardTitle {
         margin-bottom: 10px;
